@@ -141,14 +141,14 @@ static int win32_load(DSO *dso, const char *filename)
 	if(p == NULL)
 		{
 		DSOerr(DSO_F_WIN32_LOAD,ERR_R_MALLOC_FAILURE);
-		OPENSSL_freeLibrary(h);
+                FreeLibrary(h);
 		return(0);
 		}
 	*p = h;
 	if(!sk_push(dso->meth_data, (char *)p))
 		{
 		DSOerr(DSO_F_WIN32_LOAD,DSO_R_STACK_ERROR);
-		OPENSSL_freeLibrary(h);
+                FreeLibrary(h);
 		OPENSSL_free(p);
 		return(0);
 		}
@@ -171,7 +171,7 @@ static int win32_unload(DSO *dso)
 		DSOerr(DSO_F_WIN32_UNLOAD,DSO_R_NULL_HANDLE);
 		return(0);
 		}
-	if(!OPENSSL_freeLibrary(p))
+        if(!FreeLibrary(*p))
 		{
 		DSOerr(DSO_F_WIN32_UNLOAD,DSO_R_UNLOAD_FAILED);
 		/* We should push the value back onto the stack in
